Setup Project further, adjusted Skills to look cleaner on different size websites, fixed some spacing issues

--- a/src/Components/Skill/Skill.css
+++ b/src/Components/Skill/Skill.css
@@ -4,6 +4,8 @@
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    box-sizing: content-box;
+    height: 50px;
     padding: 30px;
     margin: 30px;
 }
