--- a/src/Components/SkillGroup/SkillGroup.css
+++ b/src/Components/SkillGroup/SkillGroup.css
@@ -1,5 +1,7 @@
-.skillGroup {
-    max-width: 1000px;
+
+
+.skillSizing {
+    margin: 15px;
 }
 
 .header {
