--- a/src/Components/WorkExperience/WorkExperience.css
+++ b/src/Components/WorkExperience/WorkExperience.css
@@ -1,5 +1,3 @@
 .WorkSizing {
-    height: 100%;
-    width: 100%;
     margin: 15px;
 }
